# q-arduino

./: CMakeLists.txt  CMakeLists_windows.txt  README.md  audio_classifier.py  input_processing.py  main.cpp  main.py  main_windows.cpp  pyproject.toml  server.py
build_win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  EdgeAIServerWindows.slnx  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  edge_server_windows.vcxproj  edge_server_windows.vcxproj.filters
build_win/edge_server_windows.dir/Release/: edge_server_windows.exe.recipe
build_win/edge_server_windows.dir/Release/edge_ser.DF511F69.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_win/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_win/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
build_win/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_win/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
models/: elephant_xgb.json  yamnet.onnx
